# Deep-Trajectory-Prediction

./: README.md
human_motions/: .human_motions.creator.user.3.2-pre1  .human_motions.files  .human_motions.includes  CMakeLists.txt  package.xml
human_motions/data/: bag_filter.txt
human_motions/launch/: human_model.launch  leastsquare.launch  pose_2_ray.launch  predict.launch  rosconsole.config
human_motions/src/: human_model.cpp  leastsquare_predict.cpp  pass_path.cpp  pose_2_ray.cpp  pose_2_ray.h  prediction_merge.cpp
local_planner/: CMakeLists.txt  package.xml  plugin.xml
local_planner/include/: local_planner.h
local_planner/src/: local_planner.cpp  local_planner.h
nn_trajectory/: CMakeLists.txt  package.xml
nn_trajectory/launch/: nn_prediction.launch  nn_prediction_scan.launch
nn_trajectory/src/: model  nn_predict.py  nn_predict_scan.py  pycharm_launcher
nn_trajectory/srv/: path2params.srv
nn_trajectory/tf_model/: model  traj_data.npy  traj_label.npy  traj_stat.npy  trajactory.txt  trajactory2.txt  trajactory_data.py  trajactory_learning.py  trajactory_learning2.py  trajactory_scan.txt
robot_control/: CMakeLists.txt  package.xml
robot_control/data/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.pgm
robot_control/hardware/: youbot_base.urdf.xacro
robot_control/include/: fake_driver.h  robot_control.h  robot_trainer.h
robot_control/launch/: move_base.launch  youbot_dummy.launch
robot_control/src/: fake_driver.cpp  (+2 more)
temp/: assignment5.py  img2fea.lua  load_data.py
(+9 files in other folders)
