<?xml version="1.0"?>
<package>
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>The local_planner package</description>
  <maintainer email="enyen@todo.todo">enyen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>costmap_2d</run_depend>

  <export>
    <nav_core plugin="${prefix}/lp_plugin.xml" />
  </export>
</package>
